# markdown_converter

./: Cargo.toml  LICENSE  README.md
src/: common.rs  lib.rs  steam.rs
src/anilist/: convert_anilist_bold.rs  convert_anilist_italic.rs  convert_anilist_list.rs  convert_anilist_markdown.rs  convert_anilist_spoiler.rs  mod.rs  remove_alignment.rs  remove_anilist_code_block.rs  remove_anilist_horizontal_line.rs
src/common/: add_antislash.rs  mod.rs
src/html/: convert_html_blockquote.rs  convert_html_bold.rs  convert_html_entity.rs  convert_html_h_header.rs  convert_html_italic.rs  convert_html_line_break.rs  convert_html_link.rs  convert_html_list.rs  convert_html_strikethrough.rs  mod.rs  remove_html_code_block.rs  remove_html_horizontal_line.rs  remove_html_image.rs  remove_html_p_align.rs
src/steam/: convert_steam_markdown.rs  mod.rs
src/vndb/: convert_vndb_link.rs  convert_vndb_spoiler.rs  mod.rs
